feature/sharded-cache: Sharded the cache
Instead of a single map[string]interface{} in which all of
the data is written and against which all threads will have
to get a lock, the cache is now sharded.

Refactored the various structs for dependency injection.

Got rid of the build flags/tags to separate unit from
integration tests.  Added the ability to skip the
integration tests by omitting the export of an env var.
 Kind of a moot point, since all there is right now is
integration testing, but it was mostly to get the model
sorted out for other projects.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,16 @@
 {
-  "go.buildFlags": [
-    "-tags=unit,integration"
-  ],
-  "go.testTags": "unit,integration",
-  "go.buildTags": "unit,integration"
+  "go.testEnvVars": {
+    "INTEGRATION": "1",
+    "IMDS_INTTEST_PERF_DATASTORE_SHARDS": 16,
+    "IMDS_INTTEST_PERF_NUM_WRITES_PER_WRITER": 200,
+    "IMDS_INTTEST_PERF_WRITES_SLEEP_TIME": 5,
+    "IMDS_INTTEST_PERF_NUM_WRITERS": 20,
+    "IMDS_INTTEST_PERF_NUM_READERS": 20,
+    "IMDS_INTTEST_PERF_READER_SLEEP_TIME": 5,
+  },
+  "cSpell.words": [
+    "curr",
+    "hasher",
+    "waitgroups"
+  ]
 }
